@@ -499,6 +499,7 @@ All (GUI):
 - wxComboCtrl, wxOwnerDrawnComboBox: better support for themed and custom
   panel backgrounds, especially on OS X.
 - Add WXK_CONTROL_A..WXK_CONTROL_Z constants (Jan van Dijk).
+- Add support for alpha channel in colours in wxSVGFileDC (snowleopard).
 
 GTK:
 
